# colorgen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .woodpecker.yml  .yamlfmt.yaml  Dockerfile  Makefile  README.md  colorgen.py  docker-compose.yml  exceptions.py  extract-colors  extract-colors.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
color/: color.py  colour.py
colour/: __init__.py  colour.py  extract.py  theme.py  utils.py
docs/: faq.md  index.md  installation.md  quickstart.md
docs/usage/: api.md  cli.md
examples/configs/awesome/: mountain-peak-dark.lua  mountain-peak-light.lua  red-clouds-dark.lua
examples/configs/kitty/: mountain-peak-dark.conf  mountain-peak-light.conf  red-clouds-dark.conf
examples/configs/rofi/: mountain-peak-dark.rasi  mountain-peak-light.rasi  red-clouds-dark.rasi
parse/: parser.py
parse/parsers/: kitty.py
tests/: conftest.py  test_colour.py  test_extract.py  test_extractor.py  test_gen.py  test_generators.py  test_utils.py
tui/: __init__.py
