[project]
name = "colorgen"
description = "Effortless image-based colorscheme generation with ML-powered recommendations"
keywords = ["colorscheme", "theme", "terminal", "awesomewm", "kitty", "rofi", "tui"]

version = "0.2.0"
requires-python = "==3.12.*"

license = { text = "GPL-3.0-or-later" }
readme = "README.md"

authors = [
    { name = 'Piotr Krzysztof', email = 'piotr@codextechnologies.org' }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment :: Window Managers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

homepage = "https://github.com/straightchlorine/colorgen"
repository = "https://github.com/straightchlorine/colorgen"

[project.scripts]
colorgen = "colorgen:main"

[project.gui-scripts]
colorgen-tui = "colorgen.tui:main"

[tool.poetry.dependencies]
python = "~3.12"
pylette = "==5.1.1"
textual = "^6.6.0"
pillow = "<11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
hypothesis = "^6.148.0"
ruff = "^0.14.5"
mypy = "^1.18.2"
bandit = {extras = ["toml"], version = "^1.8.6"}
safety = "^3.7.0"
pre-commit = "^4.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=colour",
    "--cov=gen",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["colour", "gen"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "ARG",    # Allow unused arguments in tests
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pylette.*", "PIL.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]
